--- a/templates/home.html
+++ b/templates/home.html
@@ -7,41 +7,42 @@
   <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
-  <title>ML API</title>
+  <link rel= "stylesheet" href="{{ url_for('static', filename='style.css')}}">
+  <title>Machine Learining Implementation</title>
 </head>
 <body>
- <div class="login">
-	<h1>Boston House Price Prediction</h1>
+    <div class="container">
+      <div class="login">
+        <h1>Boston House Price Prediction</h1>
 
      <!-- Main Input For Receiving Query to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-      <input type="text" name="CRIM" placeholder="CRIM" required="required" /><br>
-    	<input type="text" name="ZN" placeholder="ZN" required="required" /><br>
-        <input type="text" name="INDUS" placeholder="INDUS" required="required" /><br>
-        <input type="text" name="CHAS" placeholder="CHAS" required="required" /><br>
-        <input type="text" name="NOX" placeholder="NOX" required="required" /><br>
-        <input type="text" name="RM" placeholder="RM" required="required" /><br>
-        <input type="text" name="Age" placeholder="Age" required="required" /><br>
-        <input type="text" name="DIS" placeholder="DIS" required="required" /><br>
-        <input type="text" name="RAD" placeholder="RAD" required="required" /><br>
-        <input type="text" name="TAX" placeholder="TAX" required="required" /><br>
-        <input type="text" name="PTRATIO" placeholder="PTRATIO" required="required" /><br>
-        <input type="text" name="B" placeholder="B" required="required" /><br>
-        <input type="text" name="LSTAT" placeholder="LSTAT" required="required" /><br>
+        <form action="{{ url_for('predict')}}"method="post">
+        <input type="text" name="CRIM" placeholder="CRIM" required="required" /><br>
+            <input type="text" name="ZN" placeholder="ZN" required="required" /><br>
+            <input type="text" name="INDUS" placeholder="INDUS" required="required" /><br>
+            <input type="text" name="CHAS" placeholder="CHAS" required="required" /><br>
+            <input type="text" name="NOX" placeholder="NOX" required="required" /><br>
+            <input type="text" name="RM" placeholder="RM" required="required" /><br>
+            <input type="text" name="Age" placeholder="Age" required="required" /><br>
+            <input type="text" name="DIS" placeholder="DIS" required="required" /><br>
+            <input type="text" name="RAD" placeholder="RAD" required="required" /><br>
+            <input type="text" name="TAX" placeholder="TAX" required="required" /><br>
+            <input type="text" name="PTRATIO" placeholder="PTRATIO" required="required" /><br>
+            <input type="text" name="B" placeholder="B" required="required" /><br>
+            <input type="text" name="LSTAT" placeholder="LSTAT" required="required" /><br>
 
-       
+        
 
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
-    </form>
-</div>
+            <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+        </form>
 
-<!-- Fancy Result Container -->
-<div class="result-container">
-  <div class="prediction-text">
-    {{prediction_text}}
-  </div>
-</div>
-
-</body>
+        <!-- Fancy Result Container -->
+        <div class="result-container">
+          <div class="prediction-text">
+            {{prediction_text}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
